--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "dependencies": {
+    "@rails/webpacker": "5.4.4",
     "react-phone-input-2": "^2.15.1",
-    "ruby": "^0.6.1"
+    "ruby": "^0.6.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3"
   }
 }
